# fastapi_1

./: README.md  main.20200705.py  main.py  pyproject.toml
templates/: cities.html
