[tool.poetry]
name = "python"
version = "0.1.0"
description = ""
authors = ["test <test>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.78.0"
black = "^22.3.0"
uvicorn = "^0.18.1"
requests = "^2.28.1"
Jinja2 = "^3.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
